@@ -43,5 +43,5 @@
       }
    },
    "release_status" : "testing",
-   "version" : "0.78_3"
+   "version" : "0.78_5"
 }
