@@ -9,11 +9,11 @@ check_soa		Dick Franks <rwfranks@acm.org>
 
 check_zone              Dennis Glatting <dennis.glatting@software-munitions.com>
 
-dnswalk	                Dave Barr <barr@cis.ohio-state.edu>
+find_zonecut		Dick Franks <rwfranks@acm.org>
 
 loc2earth.fcgi	        Christopher Davis <ckd@kei.com>
 
 loclist.pl              Christopher Davis <ckd@kei.com>
 
 ---
-$Id: README 607 2006-09-17 18:20:28Z olaf $
+$Id: README 1251 2014-08-18 10:18:23Z willem $
